--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         <div class="row h-100">
           <div class="col-lg-7 my-auto">
             <div class="header-content mx-auto">
-              <h1 class="mb-5">New Age is an app landing page that will help you beautifully showcase your new mobile app, or anything else!</h1>
-              <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Start Now for Free!</a>
+              <h1 class="mb-5"><b>KnzkApp<b/> は、BBCodeやカスタム絵文字に対応した神崎丼専用 Mastodon クライアントです。</h1>
+              <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Coming soon</a>
             </div>
           </div>
           <div class="col-lg-5 my-auto">
