ダークテーマ実装(1.0.0a3)にともなう画像変更

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <div class="device-mockup nexus7 portrait black">
                         <div class="device">
                             <div class="screen">
-                                <img src="img/App-Nexus5.png" class="img-fluid" alt="">
+                                <img src="img/App-Nexus5.png?2017-09-22" class="img-fluid" alt="">
                             </div>
                             <div class="button">
                             </div>
@@ -94,7 +94,7 @@
                     <div class="device-mockup iphone6_plus portrait white">
                         <div class="device">
                             <div class="screen">
-                                <img src="img/BBCode_iPhone.png" class="img-fluid" alt="">
+                                <img src="img/BBCode_iPhone.png?2017-09-22" class="img-fluid" alt="">
                             </div>
                         </div>
                     </div>
