--- a/index.html
+++ b/index.html
@@ -123,6 +123,13 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="feature-item">
+                                <i class="fa fa-align-left text-primary"></i>
+                                <h3>Enquete</h3>
+                                <p class="text-muted">アンケートの作成、投票が行えます。</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="feature-item">
                                 <i class="fa fa-bell text-primary"></i>
                                 <h3>more...</h3>
                                 <p class="text-muted">その他にも細かな独自仕様に対応。</p>
