favicon追加＆一部修正

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="神崎丼専用Mastodonクライアント KnzkApp のランディングページです。">
     <title>KnzkApp - 神崎丼専用Mastodonクライアント</title>
+    <link rel="shortcut icon" href="/images/knzkdevfavicon.ico">
 
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
@@ -46,7 +47,7 @@
         <div class="row h-100">
             <div class="col-lg-7 my-auto">
                 <div class="header-content mx-auto">
-                    <h1 class="mb-5">KnzkApp は、BBCodeやカスタム絵文字に対応した神崎丼専用 Mastodon クライアントです。</h1>
+                    <h1 class="mb-5">KnzkAppは、BBCodeやカスタム絵文字に対応した神崎丼専用Mastodonクライアントです。</h1>
                     <a href="#" class="btn btn-outline btn-xl js-scroll-trigger">Coming soon</a>
                 </div>
             </div>
