ソースコードリンクを追加

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://github.com/KnzkDev/KnzkApp" target="_blank"><i class="fa fa-github"></i> Source code</a>
+                </li>
             </ul>
         </div>
     </div>
@@ -158,6 +161,7 @@
 
 <footer>
     <div class="container">
+        <p>KnzkAppはオープンソースソフトウェアです。 <a href="https://github.com/KnzkDev/KnzkApp" target="_blank"><i class="fa fa-github"></i> KnzkDev/KnzkApp</a> から開発に参加したり、問題を報告する事ができます。</p>
         <ul class="list-inline">
             <li class="list-inline-item">
                 <a href="https://knzk.me/" target="_blank">神崎丼</a>
