--- a/index.html
+++ b/index.html
@@ -26,11 +26,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-                <!--
                 <li class="nav-item">
                   <a class="nav-link js-scroll-trigger" href="#download">Download</a>
                 </li>
-                -->
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#features">features</a>
                 </li>
@@ -51,7 +49,7 @@
             <div class="col-lg-7 my-auto">
                 <div class="header-content mx-auto">
                     <h1 class="mb-5">KnzkAppは、BBCodeやカスタム絵文字に対応した神崎丼専用Mastodonクライアントです。</h1>
-                    <a href="#" class="btn btn-outline btn-xl js-scroll-trigger">Coming soon</a>
+                    <a href="#download" class="btn btn-outline btn-xl js-scroll-trigger">Download Now</a>
                 </div>
             </div>
             <div class="col-lg-5 my-auto">
@@ -70,22 +68,21 @@
         </div>
     </div>
 </header>
-<!--
-    <section class="download bg-primary text-center" id="download">
-      <div class="container">
+
+<section class="download bg-primary text-center" id="download">
+    <div class="container">
         <div class="row">
-          <div class="col-md-8 mx-auto">
-            <h2 class="section-heading">Discover what all the buzz is about!</h2>
-            <p>Our app is available on any mobile device! Download now to get started!</p>
-            <div class="badges">
-              <a class="badge-link" href="#"><img src="img/google-play-badge.svg" alt=""></a>
-              <a class="badge-link" href="#"><img src="img/app-store-badge.svg" alt=""></a>
+            <div class="col-md-10 mx-auto">
+                <h2 class="section-heading">Download</h2>
+                <div class="badges">
+                    <a class="badge-link" href="https://play.google.com/store/apps/details?id=net.knzkdev.app"><img src="img/google-play-badge.svg" alt="GooglePlay"></a>
+                    <a class="badge-link" href="https://itunes.apple.com/jp/app/knzkapp/id1296825434?l=ja"><img src="img/app-store-badge.svg" alt="AppStore"></a>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
-    </section>
--->
+    </div>
+</section>
+
 <section class="features" id="features">
     <div class="container">
         <div class="section-heading text-center">
