--- a/index.html
+++ b/index.html
@@ -174,14 +174,24 @@
 
 <section class="contact bg-primary" id="contact">
     <div class="container">
-        <p><b>アプリに関するお問い合わせはねじりわさびまで</b></p>
-        <ul class="list-inline list-social">
-            <li class="list-inline-item social-facebook">
-                <a href="https://knzk.me/@y" target="_blank">
-                    <i class="fa fa-share-square-o"></i>
-                </a>
-            </li>
-        </ul>
+        <div class="row">
+            <div class="col-md-4"></div>
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            <img src="https://gravatar.com/avatar/662329f36d2f92579a2b50f32b5adee0?s=100" style="border-radius:100%;padding-bottom: 5px"/><br>
+                            ねじりわさび
+                        </h5>
+                        <h6 class="card-subtitle mb-2 text-muted">@y@knzk.me</h6>
+                        <p class="card-text">KnzkApp作った人です。学生やってます。</p>
+                        <a href="https://knzk.me/@y" class="card-link" target="_blank">Mastodon</a>
+                        <a href="http://amzn.asia/7FRzk9C" class="card-link" target="_blank">Donate</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4"></div>
+        </div>
     </div>
 </section>
 
