change to knzkapp.nzws.me

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <meta name="twitter:site" content="@neziri_wasabi"/>
     <meta name="twitter:title" content="KnzkApp - 独自機能インスタンス向けMastodonクライアント"/>
     <meta name="twitter:description" content="独自機能インスタンス向けのMastodonクライアントです。様々な機能に対応。オープンソース。"/>
-    <meta name="twitter:image" content="https://knzkapp.yuzu.tk/img/knzk.ogp.png"/>
-    <meta name="twitter:url" content="https://knzkapp.yuzu.tk"/>
+    <meta name="twitter:image" content="https://knzkapp.nzws.me/img/knzk.ogp.png"/>
+    <meta name="twitter:url" content="https://knzkapp.nzws.me"/>
 
     <meta property="og:title" content="KnzkAppトップページ"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="https://knzkapp.yuzu.tk"/>
-    <meta property="og:image" content="https://knzkapp.yuzu.tk/img/knzk.ogp.png"/>
+    <meta property="og:url" content="https://knzkapp.nzws.me"/>
+    <meta property="og:image" content="https://knzkapp.nzws.me/img/knzk.ogp.png"/>
     <meta property="og:site_name" content="KnzkApp - 独自機能インスタンス向けMastodonクライアント"/>
     <meta property="og:description" content="独自機能インスタンス向けのMastodonクライアントです。様々な機能に対応。オープンソース。" />
 
